--- a/Archive/style.css
+++ b/Archive/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: 'ZCOOL KuaiLe', cursive;
     font-size: 18px;
     line-height: 34px;
@@ -12,7 +12,7 @@ body {
   
   /* general */
   
-  .container {
+  /* .container {
     width: 100%;
     max-width: 960px;
     margin: 0 auto;
@@ -40,7 +40,7 @@ body {
   }
   
   /* header */
-  #masthead {
+  /* #masthead {
     z-index: 99;
     width: 100%;
     height: 300px;
@@ -63,9 +63,9 @@ body {
     border-top: 2px solid #cccccc;
     border-bottom: 2px solid #cccccc;
   }
-  
+   */
   /* footer */
-  footer {
+  /* footer {
     padding: 30px 0;
     clear: both;
     font-size: 12px;
@@ -75,11 +75,11 @@ body {
     background: #666666;
     border-top: 8px solid #cccccc;
     height: 50px;
-  }
+  } */
   
   /* main */
   
-  #main-container {
+  /* #main-container {
     padding-top: 30px;
     min-height: calc(100vh - 70px);
     margin: 0px 20px 0px 170px;
@@ -94,32 +94,8 @@ body {
     background: #ffffff;
     border: 1px solid #dddddd;
     background: #666666;
-  }
+  } */
 
  
 
-  
-@media only screen and (max-width: 980px) {
-   
-  /* I didn't seem to need to change anything for this size */
-    
-}
-
-@media only screen and (max-width: 768px) {
-    .container {
-        max-width: 748px;
-    }
-    .auth-image {
-        max-width: 300px;
-    }
-}
-
-@media only screen and (max-width: 640px) {
-    .container {
-        max-width: 620px;
-    }
-    .auth-image {
-        max-width: 200px;
-    }
-}
 
