--- a/Archive/style.css
+++ b/Archive/style.css
@@ -1,4 +1,4 @@
-/* body {
+ body {
     font-family: 'ZCOOL KuaiLe', cursive;
     font-size: 18px;
     line-height: 34px;
@@ -12,7 +12,7 @@
   
   /* general */
   
-  /* .container {
+   .container {
     width: 100%;
     max-width: 960px;
     margin: 0 auto;
@@ -40,7 +40,7 @@
   }
   
   /* header */
-  /* #masthead {
+   #masthead {
     z-index: 99;
     width: 100%;
     height: 300px;
@@ -63,9 +63,9 @@
     border-top: 2px solid #cccccc;
     border-bottom: 2px solid #cccccc;
   }
-   */
+   
   /* footer */
-  /* footer {
+   footer {
     padding: 30px 0;
     clear: both;
     font-size: 12px;
@@ -75,11 +75,11 @@
     background: #666666;
     border-top: 8px solid #cccccc;
     height: 50px;
-  } */
+  } 
   
   /* main */
   
-  /* #main-container {
+   #main-container {
     padding-top: 30px;
     min-height: calc(100vh - 70px);
     margin: 0px 20px 0px 170px;
@@ -94,7 +94,7 @@
     background: #ffffff;
     border: 1px solid #dddddd;
     background: #666666;
-  } */
+  } 
 
  
 
