--- a/Archive/style.css
+++ b/Archive/style.css
@@ -1,5 +1,5 @@
  body {
-    font-family: 'ZCOOL KuaiLe', cursive;
+  
     font-size: 18px;
     line-height: 34px;
     color: #ffffff;
@@ -15,87 +15,130 @@
    .container {
     width: 100%;
     max-width: 960px;
-    margin: 0 auto;
-    clear: both;
+    margin: auto;
     
   }
   
   h1,
   p {
     margin-bottom: 20px;
+    font-family: 'Raleway', sans-serif; 
   }
   
   p:last-child {
     margin-bottom: 0;
   }
-  
+/*   
   h1 {
-    font-family: 'ZCOOL KuaiLe', cursive;
+    
     font-weight: 700;
     color: black;
     padding-bottom: 20px;
     font-size: 30px;
     line-height: 49px;
     border-bottom: 3px solid #dddddd;
-  }
+  } */
   
   /* header */
-   #masthead {
+   .box {
     z-index: 99;
     width: 100%;
     height: 300px;
-    margin: 0 0 30px;
-    color: #ffffff;
+    margin: auto;
+    font-family: 'Akronim', cursive;
+    margin: 0 auto;
+    clear: both;
   }
   
-  #logo {
+  .gif {
+      float: left;
+  }
+  
+a {
+    text-decoration: none;
+    color: white;font-size: 50px;
+    font-weight: 30;
+    line-height: 80px;
+    padding-top: 70px;
+    margin-left: 60px;
+    text-align: center;
+    opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 5s;
+}
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+  a.logo {
     float: left;
+    padding: 20px;
     width: 960px;
     height: 340px;
-    font-family: 'ZCOOL KuaiLe', cursive;
-    font-size: 110px;
-    font-weight: 700;
-    line-height: 100px;
     color: #ffffff;
-    text-align: center;
-    text-decoration: none;
-    background: url("https://www.geek.com/g00/3_c-7x78x78x78.hffl.dpn_/c-7NPSFQIFVT34x24iuuqtx3ax2fx2fx78x78x78.hffl.dpnx2fx78q-dpoufoux2fvqmpbetx2f3127x2f19x2ftpvuiqbsl.kqhx3fj21d.nbslx3djnbhf_$/$/$/$/$/$");
     border-top: 2px solid #cccccc;
     border-bottom: 2px solid #cccccc;
   }
-   
+      
+
   /* footer */
    footer {
-    padding: 30px 0;
+    padding: 0px 0px 10px 0px;
     clear: both;
     font-size: 12px;
     color: #ffffff;
     color: #cccccc;
     text-align: center;
     background: #666666;
-    border-top: 8px solid #cccccc;
-    height: 50px;
+    border-top: 4px solid #cccccc;
+    height: 80px;
   } 
   
   /* main */
-  
    #main-container {
     padding-top: 30px;
     min-height: calc(100vh - 70px);
     margin: 0px 20px 0px 170px;
+  
   }
   
   .section1 {
     float: left;
     width: 100%;
     height: 400px;
+    font-family: 'Raleway', sans-serif; 
+    font-size: 30px;
+    text-align: center;
+    max-width: 800px;
+    padding: 60px;
+    background: #ffffff;
+    border: none;
+    background: #302f2f;
+    box-shadow: 20px 20px 50px grey inset;
+    box-shadow: 10px 10px 100px grey;
+    column-count: 2;
+    column-span: all;
+    column-fill: balance;
+  } 
+.leftcolum {
+    float: left;
+}
+  /* .section2 {
+    
+    width: 50%;
+    height: 400px;
     max-width: 100%;
     padding: 30px;
     background: #ffffff;
     border: 1px solid #dddddd;
     background: #666666;
-  } 
-
+  }  */
  
 
 
